<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


<!--navbar-->
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_question_24"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_exchange"
        android:icon="@drawable/ic_exchange_24"
        android:title="@string/title_exchange" />

    <item
        android:id="@+id/navigation_location"
        android:icon="@drawable/ic_location_24"
        android:title="@string/title_location" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_group_24"
        android:title="@string/title_contacts" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24"
        android:title="@string/title_settings" />




</menu>